2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* sys/v4l2/v4l2src_calls.c: (gst_v4l2_buffer_finalize),
	(gst_v4l2_buffer_class_init), (gst_v4l2_buffer_pool_finalize),
	(gst_v4l2_buffer_pool_class_init):
	Chain up the finalize functions. Fixes bug #515984.

2008-02-12  Jan Schmidt  <jan.schmidt@sun.com>

	* sys/ximage/ximageutil.c:
	Chain up in the finalize function for our custom
	buffer sub-class.
	Patch by: Sebastian Dröge  <slomo@circular-chaos.org>
	Fixes: #515706

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/debug/efence.c: (gst_fenced_buffer_finalize),
	(gst_fenced_buffer_class_init):
	Properly chain up finalize method. Fixes bug #515979.

2008-02-12  Jan Schmidt  <jan.schmidt@sun.com>

	* sys/ximage/gstximagesrc.c:
	Free allocated Damage memory before closing our connection to the
	X server. Partially fixes: #515706

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/jpeg/gstsmokeenc.c: (gst_smokeenc_chain):
	* tests/check/Makefile.am:
	* tests/check/gst-plugins-good.supp:
	Add a few libjpeg suppressions and initialize a variable to
	make smokeenc valgrind clean. Fixes bug #515701.

2008-02-11  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/avi/gstavidemux.c:
	Revert patch which sends timestamps only on keyframes, as it
	breaks playback with current gst-ffmpeg.

	Fixes: #515562

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/multifile/gstmultifilesrc.c: (gst_multi_file_src_create):
	* tests/check/elements/multifile.c: (GST_START_TEST):
	Close some memory leaks spotted by the unit test. Fixes bug #515697.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gconf/gconf.c: (gst_gconf_render_bin_with_default):
	Use and unset the GError when pipeline creation fails instead of
	simply leaking it. Fixes bug #515704.

2008-02-10  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/audiofx/audioamplify.c:
	* gst/audiofx/audiochebband.c:
	* gst/audiofx/audiocheblimit.c:
	* gst/audiofx/audiodynamic.c: